# Diabetes

./: Dockerfile  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  scaler.pkl  svm_model.pkl  test.ipynb
Diabetes/: asgi.py  settings.py  urls.py  wsgi.py
gambling_addiction/: apps.py
single_page/: urls.py  views.py
single_page/templates/single_page/: read_me.html
survey/: admin.py  models.py  urls.py  views.py
survey/migrations/: 0001_initial.py  0002_remove_survey_number.py  0003_data.py  0004_rename_question1_data_age_and_more.py
survey/static/survey/css/: style.css
survey/templates/survey/: result.html  survey.html
